Archive2/f6/d1171c4ad109ec/output
main.cpp: In function 'int main()':
main.cpp:20:13: error: reference to 'list' is ambiguous
     append( list, "First_Person", 21);
             ^
main.cpp:12:19: note: candidates are: std::list<Person> list
 std::list<Person> list;
                   ^
In file included from /usr/local/include/c++/4.9.0/list:63:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.0/bits/stl_list.h:447:11: note:                 template<class _Tp, class _Alloc> class std::list
     class list : protected _List_base<_Tp, _Alloc>
           ^
main.cpp:21:13: error: reference to 'list' is ambiguous
     append( list, "Second_Person", 22);
             ^
main.cpp:12:19: note: candidates are: std::list<Person> list
 std::list<Person> list;
                   ^
In file included from /usr/local/include/c++/4.9.0/list:63:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.0/bits/stl_list.h:447:11: note:                 template<class _Tp, class _Alloc> class std::list
     class list : protected _List_base<_Tp, _Alloc>
           ^
main.cpp:23:24: error: reference to 'list' is ambiguous
     for (auto &person: list)
                        ^
main.cpp:12:19: note: candidates are: std::list<Person> list
 std::list<Person> list;
                   ^
In file included from /usr/local/include/c++/4.9.0/list:63:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.0/bits/stl_list.h:447:11: note:                 template<class _Tp, class _Alloc> class std::list
     class list : protected _List_base<_Tp, _Alloc>
           ^
